--- a/index.html
+++ b/index.html
@@ -29,5 +29,21 @@
     <div id="map">
       <svg></svg>
     </div>
+    <div class="legend">
+      <span class="legend-label">LEGEND:</span>
+      <div class="legend-item">
+        <span class="legend-circle legend-circle-departures"></span>
+        <span class="legend-text">More departures</span>
+      </div>
+      <div class="legend-item">
+        <span class="legend-circle legend-circle-balanced"></span>
+        <span class="legend-text">Balanced</span>
+      </div>
+      <div class="legend-item">
+        <span class="legend-circle legend-circle-arrivals"></span>
+        <span class="legend-text">More arrivals</span>
+      </div>
+    </div>
+    <div class="legend-separator"></div>
   </body>
 </html>
