--- a/index.html
+++ b/index.html
@@ -16,15 +16,18 @@
   </head>
   <body>
     <header>
-      <h1>🚴🏼‍♀️ Bikewatching</h1>
-      <label>
-        Filter by time:
-        <input type="range" id="time-slider" min="-1" max="1440" value="-1" />
-        <span class="time-display-container">
-          <time id="time-display"></time>
-          <em id="any-time">(any time)</em>
-        </span>
-      </label>
+      <div class="header-left">
+        <img src="assets/favicon.svg" alt="Bikewatching logo" class="logo" />
+        <h1>Bikewatching</h1>
+      </div>
+      <div class="header-right">
+        <label>
+          Filter by time:
+          <input type="range" id="time-slider" min="-1" max="1440" value="-1" />
+        </label>
+        <time id="time-display"></time>
+        <em id="any-time">(any time)</em>
+      </div>
     </header>
     <div id="map">
       <svg></svg>
